# engenheiro-producao-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BRIDGE_CROSSSELL_RAG.md  CHANGELOG.md  COUNCIL_TASKS.md  Dockerfile  Dockerfile.worker  ECOSYSTEM_30_MASTER.md  ECOSYSTEM_MARKETPLACE_PLAYBOOK.md  EXECUTION_PLAN.md  MICROSOFT_AGENTES_MICROS.md  README.md  STRIPE_APP_IMPLEMENTACAO.md  acoes feitas via claude.docx  agents-cli-manifest.yaml  cloudbuild.yaml  config.yaml  deploy.sh  deployment_metadata.json  docker-compose.yml  google_addon_code.html  google_addon_v2.html  gpt_store_openapi.yaml  pyproject.toml  pytest.ini  render.yaml  requirements-prod.txt  requirements-worker.txt  requirements.txt  sales_pipeline.db  sql_mercado_5_paises.sql  sql_para_supabase.sql  sql_plugins_globais.html  sql_plugins_globais.sql  sql_popular_agent_registry.sql  sql_popular_agent_registry_v2.sql  sql_sallesjam.html  test_jwt.py
app/: agent.py  fast_api_app.py  main.py
chrome-extension/: content.js  manifest.json  popup.html  popup.js
config/: acp_checkout_config.json  budgets.yaml  policies.toml  policies.yaml  quality_gates.yaml  stripe_agentic_catalog.csv
deploy/: hetzner-setup.sh
docs/: GLOBAL_VISIBILITY_MANUAL_ACTIONS.md  MANUAL_STEPS_README.md  MARKETPLACE_SETUP_GUIDE.md  MCP_CONNECTION_GUIDE.md  MCP_SUBMISSION_GUIDE.md
hubspot-marketplace-app/: hsproject.json
huggingface_space/: app.py  requirements.txt
k8s/: README.md  agent-registry.yaml  configmap.yaml  deploy.ps1  deploy.sh  ingress.yaml  namespace.yaml  secrets.yaml
marketplace-integration/: .env.example  README.md  requirements.txt
mcp-registry/: erp.server.json  esg.server.json  regulatory.server.json
mindstudio/: lgpd_prompt.txt  nr1_prompt.txt  regulatory_watch_prompt.txt
offers/: agent_registry.sql  aion-71-agentes-offer.json  aion-gcp-offer.json  architecture.txt  ecosystem-aec-offer.json  pubsub_schema.json
replit/: compliance_score_agent.py
scripts/: apply_manifests.py  build_and_deploy.py  build_mcp_and_deploy.py  build_with_source.py  check_build.py  check_build_detail.py  check_build_logs.py  check_last_log.py  check_latest_logs.py  check_render.py  check_render_deploy.py  check_revenue.py  check_seo.py  check_settings.py  check_slugs.py  check_stripe_account.py  create_enterprise_tables.py  create_privacy_tables.py  create_stripe_products.py  create_stripe_products_v3.py  create_supabase_tables.py  deploy_agent_runtime.py  deploy_all_marketplaces.py  deploy_gke.py  deploy_google_addon.py  deploy_marketplace.py  generate_agent_keys.py  generate_microsoft_marketplace.py  generate_remaining_seo.py  generate_seo_pages.py  get_build_logs.py  get_build_logs2.py  get_build_logs3.py  get_build_logs_new.py  (+37 more)
(+610 files in other folders)
