[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion"
version = "6.0.0"
description = "Agents Intelligence Orchestration Network"
readme = "README.md"
authors = [
    {name = "Global Match Engenharia de Producao", email = "contato@global-engenharia.com"}
]
license = {text = "Proprietary"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic[email]>=2.9.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "openai>=2.44.0",
    "supabase>=2.31.0",
    "stripe>=15.3.0",
    "anthropic>=0.113.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.32",
    "email-validator>=2.3.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.37",
    "google-cloud-aiplatform>=1.158.0",
    "google-genai>=2.10.0",
    "protobuf>=6.33.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
orchestration = ["langgraph>=0.2.0", "langchain-core>=0.3.0"]
database = ["supabase>=2.5.0", "qdrant-client>=1.11.0", "asyncpg>=0.30.0"]
all = [
    "langgraph>=0.2.0", "langchain-core>=0.3.0",
    "supabase>=2.5.0", "qdrant-client>=1.11.0", "asyncpg>=0.30.0",
    "stripe>=10.0.0", "prometheus-client>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
